# logging_base

./: pyproject.toml
app/: log.py  log_utils.py  main.py
